# IML-Perception-Box

./: .gitignore  CMakeLists.txt  README.md  camera_config.yaml  example_client.py  install_stella_vslam.sh  installation.txt  perception_box.py  requirements.txt  socket_test.py  testopen3d.py  zed_resolutions_and_framerates.csv  zedpy.py
Kimera-VIO/: camera_capture.py
Kimera-VIO/src/mesh/: MeshOptimization.cpp
Kimera-VIO/tests/: testTracker.cpp
Kimera/include/kimera-vio/mesh/: MeshOptimization.h
Kimera/src/frontend/: RgbdCamera.cpp
Yaml-files/: realsense.yaml  zed.yaml
mapping/: reconstruction.py  rendering_utils.py  segmentation_model_loader.py  test.py  testserver.py
onnx_model_transfer/: example_transfer.py
python_helpers/: client.py  depth-recieve.py  realsense-intrinsics.py  realsense-options.py  yaml_maker_zed.py  zed-intrinsics.py  zed_options.py
python_helpers/config-maker/: camera_config.yaml  yaml_maker.py
python_helpers/config-maker/templates/: index.html
src/: camera_slam.cc  imu.cc  run_camera_slam.cc  selectiveslam.cc  selectiveslam2.cc  selectiveslam3.cc  selectiveslam4.cc
src/depth_test/: realsense-depth.cpp  zed_depth.cpp
